--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -5,6 +5,7 @@
   justify-content: left;
   text-align: left;
   margin-bottom: 0;
+}
 
 .contact-list {
   list-style: none;
@@ -14,7 +15,7 @@
 
 .contact-list li {
   margin-bottom: 0px; 
-  font-size: 1em;
+  font-size: 1.1em;
   display: flex;
   align-items: center;
 }
@@ -24,5 +25,5 @@
 }
 
 .contact-list li svg {
-  font-size: 1em;
+  font-size: 1.1em;
 }
