--- a/src/styles/blogPost.css
+++ b/src/styles/blogPost.css
@@ -55,7 +55,7 @@
 
   .blog-content a:hover,
   .blog-content a:focus {
-      color: #007bff; 
+      color: #757575; 
       text-decoration: underline; 
   }
 
