--- a/src/styles/blogPost.css
+++ b/src/styles/blogPost.css
@@ -51,7 +51,11 @@
   .blog-content a {
     color: #172b41; 
     text-decoration: underline; 
-}
+  }
+
+  .blog-content a[data-footnote-ref] {
+    text-decoration: none;
+  }
 
   .blog-content a:hover,
   .blog-content a:focus {
