--- a/src/styles/Courses.css
+++ b/src/styles/Courses.css
@@ -1,3 +1,13 @@
 .full-width {
   width: 100%;
 }
+
+.full-padding {
+  width: 100vw; 
+  position: relative; 
+  left: 50%; 
+  right: 50%; 
+  margin-left: -50vw; 
+  margin-right: -50vw;
+  overflow: hidden;
+}
