--- a/src/styles/blogPost.css
+++ b/src/styles/blogPost.css
@@ -154,3 +154,24 @@
   body.dark-mode .BlogCard {
     background-color: gray
   }
+
+  .blog-content code:not([class]):not(.sc-guDLey.gakjvH code) {
+    padding: .2em .4em;
+    margin: 0;
+    font-size: 85%;
+    white-space: break-spaces;
+    background-color: #afb8c133;
+    border-radius: 6px;
+    color: black;
+  }
+
+  body.dark-mode .blog-content code:not([class]):not(.sc-guDLey.gakjvH code) {
+    padding: .2em .4em;
+    margin: 0;
+    font-size: 85%;
+    white-space: break-spaces;
+    background-color: #6e768166; 
+    border-radius: 6px;
+    color: white;
+  }
+ 
