--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,20 @@
+html, body {
+  height: 100%; 
+  margin: 0;
+  padding: 0;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.main-content {
+  flex: 1; 
+  box-sizing: border-box; 
+}
+
 :root {
   --primay: black;
   --bg-primay: white;
@@ -88,4 +105,18 @@ body.dark-mode a {
 body.dark-mode a:hover,
 body.dark-mode a:focus {
   color: #bbb;
+}
+
+.footer {
+  text-align: center;
+  padding: 20px 0;
+  margin-top: 20px;
+}
+
+.icon {
+  color: black;
+}
+
+.icon:hover {
+  color: #4b64a7;
 }
