--- a/src/styles/blogPost.css
+++ b/src/styles/blogPost.css
@@ -172,3 +172,7 @@
     color: white;
   }
  
+  body.dark-mode .blog-content .tikz-drawing svg {
+    -webkit-filter: invert(100%); 
+            filter: invert(100%);
+  }
