--- a/src/styles/blogPost.css
+++ b/src/styles/blogPost.css
@@ -93,6 +93,67 @@
     box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.1); /* Adds a shadow */
   }
 
+  .blog-content blockquote {
+    margin: 10px 0;
+    margin-block-start: 0;
+    margin-inline-start: 0;
+    display: block
+  }
+
+  .blog-content blockquote.definition::before {
+    color: #31dd2e;
+    content: "Definition";
+    display: block;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 0.85em;
+    padding-top: 0.9rem;
+}
+
+  .blog-content blockquote.definition p:first-child {
+    margin-top: 0; 
+  }
+
+  .blog-content blockquote.definition {
+    margin-left: 0;
+    margin-right: 0;
+    background: rgba(174, 247, 126, 0.2);
+    border-left: 5px solid #31dd2e;
+    border-radius: 5px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0, 0.08);
+    padding-left: 0.8rem;
+    padding-right: 0.8rem;
+    padding-bottom: 0.001em;
+  }
+
+  .blog-content blockquote.equation::before {
+    color: #486bd5; 
+    content: "Equation";
+    display: block;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 0.85em;
+    padding-top: 0.9rem;
+  }
+  
+  .blog-content blockquote.equation p:first-child {
+    margin-top: 0; 
+  }
+  
+  .blog-content blockquote.equation {
+    margin-left: 0;
+    margin-right: 0;
+    background: rgba(126, 174, 247, 0.2); 
+    border-left: 5px solid #486bd5; 
+    border-radius: 5px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0, 0.08);
+    padding-left: 0.8rem;
+    padding-right: 0.8rem;
+    padding-bottom: 0.001em;
+  }
+  
+
+
   
 
 
