--- a/src/styles/blogPost.css
+++ b/src/styles/blogPost.css
@@ -10,6 +10,25 @@
     font-size: 1.25em; 
   }
 
+  .blog-content .xsmall-table {
+    /* center  */
+    margin-left: auto;
+    margin-right: auto;
+    width: 20%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .blog-content .small-table {
+    /* center  */
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+
   /* Table Styles */
   .blog-content table {
     border-collapse: collapse;
@@ -96,59 +115,63 @@
   .blog-content blockquote {
     margin-block-start: 0;
     margin-inline-start: 0;
-    display: block
+    display: block;
+    margin-left: 0;
+    margin-right: 0;
+    border-radius: 5px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0, 0.08);
+    padding-left: 0.8rem;
+    padding-right: 0.8rem;
+    padding-bottom: 0.9em;
   }
 
+  .blog-content blockquote p:first-child {
+    margin-top: 0; 
+  }
+
+  .blog-content blockquote p:last-child {
+    margin-bottom: 0; 
+  }
+
+  .blog-content blockquote::before {
+    display: block;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 0.85em;
+    padding-top: 0.9rem;
+  }
+
+  /* Definition */
   .blog-content blockquote.definition::before {
     color: #31dd2e;
     content: "Definition";
-    display: block;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 0.85em;
-    padding-top: 0.9rem;
-}
-
-  .blog-content blockquote.definition p:first-child {
-    margin-top: 0; 
   }
 
   .blog-content blockquote.definition {
-    margin-left: 0;
-    margin-right: 0;
     background: rgba(174, 247, 126, 0.2);
     border-left: 5px solid #31dd2e;
-    border-radius: 5px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0, 0.08);
-    padding-left: 0.8rem;
-    padding-right: 0.8rem;
-    padding-bottom: 0.001em;
   }
 
+  /* Equation */
   .blog-content blockquote.equation::before {
     color: #486bd5; 
     content: "Equation";
-    display: block;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 0.85em;
-    padding-top: 0.9rem;
-  }
-  
-  .blog-content blockquote.equation p:first-child {
-    margin-top: 0; 
   }
   
   .blog-content blockquote.equation {
-    margin-left: 0;
-    margin-right: 0;
     background: rgba(126, 174, 247, 0.2); 
     border-left: 5px solid #486bd5; 
-    border-radius: 5px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0, 0.08);
-    padding-left: 0.8rem;
-    padding-right: 0.8rem;
-    padding-bottom: 0.001em;
+  }
+
+  /* Important */
+  .blog-content blockquote.important::before {
+    color: #dd2e2e; 
+    content: "Important";
+  }
+
+  .blog-content blockquote.important {
+    background: rgba(247, 126, 126, 0.2); 
+    border-left: 5px solid #dd2e2e; 
   }
   
 
