--- a/src/styles/blogPost.css
+++ b/src/styles/blogPost.css
@@ -1,265 +1,287 @@
 /* blogPost.css */
+
+
+.overall-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.overall-container>.blog-content {
+  visibility: visible;
+}
+
 .blog-content {
-    font-family: 'Arial', sans-serif;
-    max-width: 800px;
-    margin: auto;
-    padding: 20px;
-  }
+  font-family: 'Arial', sans-serif;
+  max-width: 1000px;
+  margin: auto;
+  padding: 20px;
+}
 
-  .katex {
-    font-size: 1.25em; 
-  }
+.katex {
+  font-size: 1.25em;
+}
 
-  .blog-content .xsmall-table {
-    /* center  */
-    margin-left: auto;
-    margin-right: auto;
-    width: 20%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
+.blog-content .xsmall-table {
+  /* center  */
+  margin-left: auto;
+  margin-right: auto;
+  width: 20%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 
-  .blog-content .small-table {
-    /* center  */
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-
-
-  /* Table Styles */
-  .blog-content table {
-    border-collapse: collapse;
-    width: 100%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-  
-  .blog-content th, .blog-content td {
-    border: 1px solid #ddd;
-    text-align: left;
-    padding: 8px;
-  }
-  
-  .blog-content th {
-    background-color: #f2f2f2;
-  }
-  
-  /* Image Styles */
-  .blog-content img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    margin: 20px auto;
-  }
-  
-
-  .blog-content input[type="checkbox"] {
-    margin-right: 10px;
-  }
-
-  .blog-content a {
-    color: #172b41; 
-    text-decoration: underline; 
-  }
-
-  .blog-content a[data-footnote-ref] {
-    text-decoration: none;
-  }
-
-  .blog-content a:hover,
-  .blog-content a:focus {
-      color: #777777; 
-      text-decoration: underline; 
-  }
-
-  
-  /* Caption Styles */
-  .caption {
-    display: block; 
-    font-size: smaller;
-    text-align: center; 
-    font-style: italic;
-    color: #555;
-    margin: 20px auto;
-  }
-
-  .caption a {
-    color: #555;
-  }
-
-  .caption a:hover {
-    color: #8f8f8f;
-  }
-
-  .subtitle {
-    display: block; 
-    font-size: smaller; 
-    text-align: left; 
-    font-style: italic; 
-    color: #555; 
-    margin: 20px auto; 
-  }
-
-  .blog-content details {
-    background-color: #f0f0f0; /* Keeps the desired grey-ish background */
-    padding: 10px;
-    margin-bottom: 20px; /* Space below the block */
-    border-radius: 10px; /* Rounded corners */
-    overflow: hidden; /* Ensures content transitions smoothly */
-    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.1); /* Adds a shadow */
-  }
-
-  .blog-content blockquote {
-    margin-block-start: 0;
-    margin-inline-start: 0;
-    display: block;
-    margin-left: 0;
-    margin-right: 0;
-    border-radius: 5px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0, 0.08);
-    padding-left: 0.8rem;
-    padding-right: 0.8rem;
-    padding-bottom: 0.9em;
-  }
-
-  .blog-content blockquote p:first-child {
-    margin-top: 0; 
-  }
-
-  .blog-content blockquote p:last-child {
-    margin-bottom: 0; 
-  }
-
-  .blog-content blockquote::before {
-    display: block;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 0.85em;
-    padding-top: 0.9rem;
-  }
-
-  /* Definition */
-  .blog-content blockquote.definition::before {
-    color: #31dd2e;
-    content: "Definition";
-  }
-
-  .blog-content blockquote.definition {
-    background: rgba(174, 247, 126, 0.2);
-    border-left: 5px solid #31dd2e;
-  }
-
-  /* Equation */
-  .blog-content blockquote.equation::before {
-    color: #486bd5; 
-    content: "Equation";
-  }
-  
-  .blog-content blockquote.equation {
-    background: rgba(126, 174, 247, 0.2); 
-    border-left: 5px solid #486bd5; 
-  }
-
-  /* Important */
-  .blog-content blockquote.important::before {
-    color: #dd2e2e; 
-    content: "Important";
-  }
-
-  .blog-content blockquote.important {
-    background: rgba(247, 126, 126, 0.2); 
-    border-left: 5px solid #dd2e2e; 
-  }
-  
+.blog-content .small-table {
+  /* center  */
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 
 
-  
+/* Table Styles */
+.blog-content table {
+  border-collapse: collapse;
+  width: 100%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.blog-content th,
+.blog-content td {
+  border: 1px solid #ddd;
+  text-align: left;
+  padding: 8px;
+}
+
+.blog-content th {
+  background-color: #f2f2f2;
+}
+
+/* Image Styles */
+.blog-content img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 20px auto;
+}
 
 
-  body.dark-mode {
-    background-color: #333;
-    color: #fff;
-  }
-  
-  body.dark-mode .blog-content {
-    background-color: #333;
-    color: #fff;
-  }
-  
-  body.dark-mode .blog-content a {
-    color: #fff;
-  }
-  
-  body.dark-mode .blog-content a:hover,
-  body.dark-mode .blog-content a:focus {
-    color: #bbb;
-  }
+.blog-content input[type="checkbox"] {
+  margin-right: 10px;
+}
 
-  body.dark-mode .blog-content details {
-    background-color: #444; 
-    color: #fff; 
-  }
+.blog-content a {
+  color: #172b41;
+  text-decoration: underline;
+}
 
-  body.dark-mode .navbar {
-    color: #fff; 
-  }
-  
-  body.dark-mode .navbar a {
-    color: #fff; 
-  }
+.blog-content a[data-footnote-ref] {
+  text-decoration: none;
+}
 
-  body.dark-mode .navbar a.active {
-    color: #fff; 
-  }
+.blog-content a:hover,
+.blog-content a:focus {
+  color: #777777;
+  text-decoration: underline;
+}
 
-  body.dark-mode .subtitle {
-    color: #fff;
-  }
 
-  body.dark-mode .caption {
-    color: #fff;
-  }
+/* Caption Styles */
+.caption {
+  display: block;
+  font-size: smaller;
+  text-align: center;
+  font-style: italic;
+  color: #555;
+  margin: 20px auto;
+}
 
-  body.dark-mode .blogPostHeading {
-    color: #E4E7EB;
-  }
+.caption a {
+  color: #555;
+}
 
-  .BlogCard {
-    background-color: #f6f8fa;
-  }
+.caption a:hover {
+  color: #8f8f8f;
+}
 
-  body.dark-mode .BlogCard {
-    background-color: gray
-  }
+.subtitle {
+  display: block;
+  font-size: smaller;
+  text-align: left;
+  font-style: italic;
+  color: #555;
+  margin: 20px auto;
+}
 
-  body.dark-mode .blog-content th {
-    background-color: hsla(0,0%,93%,.2);
-  }
+.blog-content details {
+  background-color: #f0f0f0;
+  /* Keeps the desired grey-ish background */
+  padding: 10px;
+  margin-bottom: 20px;
+  /* Space below the block */
+  border-radius: 10px;
+  /* Rounded corners */
+  overflow: hidden;
+  /* Ensures content transitions smoothly */
+  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.1);
+  /* Adds a shadow */
+}
 
-  .blog-content code:not([class]):not(.sc-guDLey code) {
-    padding: .2em .4em;
-    margin: 0;
-    font-size: 85%;
-    white-space: break-spaces;
-    background-color: #afb8c133;
-    border-radius: 6px;
-    color: black;
-  }
+.blog-content blockquote {
+  margin-block-start: 0;
+  margin-inline-start: 0;
+  display: block;
+  margin-left: 0;
+  margin-right: 0;
+  border-radius: 5px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0, 0.08);
+  padding-left: 0.8rem;
+  padding-right: 0.8rem;
+  padding-bottom: 0.9em;
+}
 
-  body.dark-mode .blog-content code:not([class]):not(.sc-guDLey code) {
-    padding: .2em .4em;
-    margin: 0;
-    font-size: 85%;
-    white-space: break-spaces;
-    background-color: #6e768166; 
-    border-radius: 6px;
-    color: white;
-  }
- 
-  body.dark-mode .blog-content .tikz-drawing svg {
-    -webkit-filter: invert(100%); 
-            filter: invert(100%);
-  }
+.blog-content blockquote p:first-child {
+  margin-top: 0;
+}
+
+.blog-content blockquote p:last-child {
+  margin-bottom: 0;
+}
+
+.blog-content blockquote::before {
+  display: block;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 0.85em;
+  padding-top: 0.9rem;
+}
+
+/* Definition */
+.blog-content blockquote.definition::before {
+  color: #31dd2e;
+  content: "Definition";
+}
+
+.blog-content blockquote.definition {
+  background: rgba(174, 247, 126, 0.2);
+  border-left: 5px solid #31dd2e;
+}
+
+/* Equation */
+.blog-content blockquote.equation::before {
+  color: #486bd5;
+  content: "Equation";
+}
+
+.blog-content blockquote.equation {
+  background: rgba(126, 174, 247, 0.2);
+  border-left: 5px solid #486bd5;
+}
+
+/* Important */
+.blog-content blockquote.important::before {
+  color: #dd2e2e;
+  content: "Important";
+}
+
+.blog-content blockquote.important {
+  background: rgba(247, 126, 126, 0.2);
+  border-left: 5px solid #dd2e2e;
+}
+
+
+
+
+
+
+body.dark-mode {
+  background-color: #333;
+  color: #fff;
+}
+
+body.dark-mode .blog-content {
+  background-color: #333;
+  color: #fff;
+}
+
+body.dark-mode .blog-content a {
+  color: #fff;
+}
+
+body.dark-mode .blog-content a:hover,
+body.dark-mode .blog-content a:focus {
+  color: #bbb;
+}
+
+body.dark-mode .blog-content details {
+  background-color: #444;
+  color: #fff;
+}
+
+body.dark-mode .navbar {
+  color: #fff;
+}
+
+body.dark-mode .navbar a {
+  color: #fff;
+}
+
+body.dark-mode .navbar a.active {
+  color: #fff;
+}
+
+body.dark-mode .subtitle {
+  color: #fff;
+}
+
+body.dark-mode .caption {
+  color: #fff;
+}
+
+body.dark-mode .blogPostHeading {
+  color: #E4E7EB;
+}
+
+.BlogCard {
+  background-color: #f6f8fa;
+  justify-content: center;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+body.dark-mode .BlogCard {
+  background-color: gray
+}
+
+body.dark-mode .blog-content th {
+  background-color: hsla(0, 0%, 93%, .2);
+}
+
+.blog-content code:not([class]):not(.sc-guDLey code) {
+  padding: .2em .4em;
+  margin: 0;
+  font-size: 85%;
+  white-space: break-spaces;
+  background-color: #afb8c133;
+  border-radius: 6px;
+  color: black;
+}
+
+body.dark-mode .blog-content code:not([class]):not(.sc-guDLey code) {
+  padding: .2em .4em;
+  margin: 0;
+  font-size: 85%;
+  white-space: break-spaces;
+  background-color: #6e768166;
+  border-radius: 6px;
+  color: white;
+}
+
+body.dark-mode .blog-content .tikz-drawing svg {
+  -webkit-filter: invert(100%);
+  filter: invert(100%);
+}
