--- a/src/styles/note-post.css
+++ b/src/styles/note-post.css
@@ -67,6 +67,7 @@
   max-width: 1000px;
   margin: auto;
   padding: 20px;
+  margin-bottom: 100px;
 }
 
 .blog-content h1 {
@@ -74,23 +75,23 @@
 }
 
 .blog-content h2 {
-  font-size: 2.1em;
+  font-size: 2.2em;
 }
 
 .blog-content h3 {
-  font-size: 1.7em;
+  font-size: 1.9em;
 }
 
 .blog-content h4 {
-  font-size: 1.3em;
+  font-size: 1.7em;
 }
 
 .blog-content h5 {
-  font-size: 0.9em;
+  font-size: 1.5em;
 }
 
 .blog-content h6 {
-  font-size: 0.5em;
+  font-size: 1.3em;
 }
 
 
@@ -377,7 +378,7 @@ body.dark-mode .blog-content th {
   background-color: hsla(0, 0%, 93%, .2);
 }
 
-.blog-content code:not([class]):not(.sc-guDLey code) {
+.blog-content code:not([class]):not(.code-blocks code) {
   padding: .2em .4em;
   margin: 0;
   font-size: 85%;
@@ -387,7 +388,7 @@ body.dark-mode .blog-content th {
   color: black;
 }
 
-body.dark-mode .blog-content code:not([class]):not(.sc-guDLey code) {
+body.dark-mode .blog-content code:not([class]):not(.code-blocks code) {
   padding: .2em .4em;
   margin: 0;
   font-size: 85%;
