--- a/src/styles/note-toc.css
+++ b/src/styles/note-toc.css
@@ -1,17 +1,31 @@
-.note-toc {
-  position: sticky;
-  top: 0;
-  overflow-y: auto;
-  max-height: 100vh;
-}
-
 .note-toc a {
   color: #172b41;
   text-decoration: none;
+}
+
+.note-toc a.active {
+  font-weight: bold;
+}
+
+.note-toc.dark-mode a {
+  color: #ffffff;
+}
+
+.note-toc.dark-mode a:hover,
+.note-toc.dark-mode a:focus {
+  color: #bbb;
 }
 
 .note-toc a:hover,
 .note-toc a:focus {
   color: #777777;
   text-decoration: underline;
+}
+
+.note-toc.dark-mode h1 {
+  color: #ffffff;
+}
+
+.note-toc.dark-mode ::marker {
+  color: #ffffff;
 }
