--- a/src/styles/notie.css
+++ b/src/styles/notie.css
@@ -1,9 +1,3 @@
-.overall-container {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
-
 @media screen and (min-width: 1200px) {
   .mw-page-container-inner {
     grid-template-columns: 15.5rem minmax(0, 1fr);
@@ -16,9 +10,9 @@
     column-gap: 24px;
     grid-template: min-content 1fr min-content / 20.25rem minmax(0, 1fr);
     grid-template-areas:
-      'siteNotice siteNotice'
-      'columnStart pageContent'
-      'footer footer';
+      "siteNotice siteNotice"
+      "columnStart pageContent"
+      "footer footer";
   }
 }
 
@@ -28,9 +22,9 @@
     column-gap: 24px;
     grid-template: min-content 1fr min-content / minmax(0, 1fr);
     grid-template-areas:
-      'siteNotice'
-      'pageContent'
-      'footer';
+      "siteNotice"
+      "pageContent"
+      "footer";
   }
 }
 
@@ -58,14 +52,6 @@
   .mw-content-container {
     grid-area: pageContent;
   }
-}
-
-.blog-content {
-  font-family: 'Arial', sans-serif;
-  max-width: 1000px;
-  margin: auto;
-  padding: 20px;
-  margin-bottom: 100px;
 }
 
 .blog-content h1 {
@@ -141,7 +127,7 @@
   margin: 20px auto;
 }
 
-.blog-content input[type='checkbox'] {
+.blog-content input[type="checkbox"] {
   margin-right: 10px;
 }
 
@@ -228,7 +214,7 @@
 /* Definition */
 .blog-content blockquote.definition::before {
   color: #31dd2e;
-  content: 'Definition';
+  content: "Definition";
 }
 
 .blog-content blockquote.definition {
@@ -239,7 +225,7 @@
 /* Proof */
 .blog-content blockquote.proof::before {
   color: #31dd2e;
-  content: 'Proof';
+  content: "Proof";
 }
 
 .blog-content blockquote.proof {
@@ -250,7 +236,7 @@
 /* Equation */
 .blog-content blockquote.equation::before {
   color: #486bd5;
-  content: 'Equation';
+  content: "Equation";
 }
 
 .blog-content blockquote.equation {
@@ -261,7 +247,7 @@
 /* Theorem */
 .blog-content blockquote.theorem::before {
   color: #486bd5;
-  content: 'Theorem';
+  content: "Theorem";
 }
 
 .blog-content blockquote.theorem {
@@ -272,7 +258,7 @@
 /* Important */
 .blog-content blockquote.important::before {
   color: #dd2e2e;
-  content: 'Important';
+  content: "Important";
 }
 
 .blog-content blockquote.important {
@@ -283,7 +269,7 @@
 /* Example */
 .blog-content blockquote.example::before {
   color: #555555;
-  content: 'Example';
+  content: "Example";
 }
 
 .blog-content blockquote.example {
@@ -291,77 +277,43 @@
   border-left: 5px solid #555555;
 }
 
-body.dark-mode .blog-content blockquote.example::before {
+.blog-content.dark-mode blockquote.example::before {
   color: #cfcdcd;
-  content: 'Example';
+  content: "Example";
 }
 
-body.dark-mode .blog-content blockquote.example {
+.blog-content.dark-mode blockquote.example {
   background: #444;
   border-left: 5px solid #cfcdcd;
 }
 
-body.dark-mode {
-  background-color: #333;
+.blog-content.dark-mode {
   color: #fff;
 }
 
-body.dark-mode .blog-content {
-  background-color: #333;
+.blog-content.dark-mode a {
   color: #fff;
 }
 
-body.dark-mode .blog-content a {
-  color: #fff;
-}
-
-body.dark-mode .blog-content a:hover,
-body.dark-mode .blog-content a:focus {
+.blog-content.dark-mode a:hover,
+.blog-content.dark-mode a:focus {
   color: #bbb;
 }
 
-body.dark-mode .blog-content details {
+.blog-content.dark-mode details {
   background-color: #444;
   color: #fff;
 }
 
-body.dark-mode .navbar {
+.blog-content.dark-mode .subtitle {
   color: #fff;
 }
 
-body.dark-mode .navbar a {
+.blog-content.dark-mode .caption {
   color: #fff;
 }
 
-body.dark-mode .navbar a.active {
-  color: #fff;
-}
-
-body.dark-mode .subtitle {
-  color: #fff;
-}
-
-body.dark-mode .caption {
-  color: #fff;
-}
-
-body.dark-mode .note-postHeading {
-  color: #e4e7eb;
-}
-
-.BlogCard {
-  background-color: #f6f8fa;
-  justify-content: center;
-  max-width: 800px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-body.dark-mode .BlogCard {
-  background-color: gray;
-}
-
-body.dark-mode .blog-content th {
+.blog-content.dark-mode th {
   background-color: hsla(0, 0%, 93%, 0.2);
 }
 
@@ -375,7 +327,7 @@ body.dark-mode .blog-content th {
   color: black;
 }
 
-body.dark-mode .blog-content code:not([class]):not(.code-blocks code) {
+.blog-content.dark-mode code:not([class]):not(.code-blocks code) {
   padding: 0.2em 0.4em;
   margin: 0;
   font-size: 85%;
@@ -385,7 +337,7 @@ body.dark-mode .blog-content code:not([class]):not(.code-blocks code) {
   color: white;
 }
 
-body.dark-mode .blog-content .tikz-drawing svg {
+.blog-content.dark-mode .tikz-drawing svg {
   -webkit-filter: invert(100%);
   filter: invert(100%);
 }
