--- a/src/styles/notie.css
+++ b/src/styles/notie.css
@@ -1,350 +1,352 @@
 @media screen and (min-width: 1200px) {
-  .mw-page-container-inner {
-    grid-template-columns: 15.5rem minmax(0, 1fr);
-  }
+    .mw-page-container-inner {
+        grid-template-columns: 15.5rem minmax(0, 1fr);
+    }
 }
 
 @media screen and (min-width: 1100px) {
-  .mw-page-container-inner {
-    display: grid;
-    column-gap: 24px;
-    grid-template: min-content 1fr min-content / 20.25rem minmax(0, 1fr);
-    grid-template-areas:
-      'siteNotice siteNotice'
-      'columnStart pageContent'
-      'footer footer';
-  }
+    .mw-page-container-inner {
+        display: grid;
+        column-gap: 24px;
+        grid-template: min-content 1fr min-content / 20.25rem minmax(0, 1fr);
+        grid-template-areas:
+            "siteNotice siteNotice"
+            "columnStart pageContent"
+            "footer footer";
+    }
 }
 
 @media screen and (max-width: 1100px) {
-  .mw-page-container-inner {
-    display: grid;
-    column-gap: 24px;
-    grid-template: min-content 1fr min-content / minmax(0, 1fr);
-    grid-template-areas:
-      'siteNotice'
-      'pageContent'
-      'footer';
-  }
+    .mw-page-container-inner {
+        display: grid;
+        column-gap: 24px;
+        grid-template: min-content 1fr min-content / minmax(0, 1fr);
+        grid-template-areas:
+            "siteNotice"
+            "pageContent"
+            "footer";
+    }
 }
 
 @media screen and (max-width: 1100px) {
-  .vector-column-start {
-    display: none;
-  }
+    .vector-column-start {
+        display: none;
+    }
 }
 
 @media screen and (min-width: 1100px) {
-  .vector-column-start,
-  .vector-column-end {
-    border-top: 1px solid transparent;
-  }
+    .vector-column-start,
+    .vector-column-end {
+        border-top: 1px solid transparent;
+    }
 }
 
 @media screen and (min-width: 1100px) {
-  .vector-column-start {
-    grid-area: columnStart;
-    overflow-anchor: none;
-  }
+    .vector-column-start {
+        grid-area: columnStart;
+        overflow-anchor: none;
+    }
 }
 
 @media screen and (min-width: 1100px) {
-  .mw-content-container {
-    grid-area: pageContent;
-  }
+    .mw-content-container {
+        grid-area: pageContent;
+    }
 }
 
 .blog-content h1 {
-  font-size: 2.5em;
+    font-size: 2.5em;
 }
 
 .blog-content h2 {
-  font-size: 2.2em;
+    font-size: 2.2em;
 }
 
 .blog-content h3 {
-  font-size: 1.9em;
+    font-size: 1.9em;
 }
 
 .blog-content h4 {
-  font-size: 1.7em;
+    font-size: 1.7em;
 }
 
 .blog-content h5 {
-  font-size: 1.5em;
+    font-size: 1.5em;
 }
 
 .blog-content h6 {
-  font-size: 1.3em;
+    font-size: 1.3em;
 }
 
 .katex {
-  font-size: 1.2em;
+    font-size: 1.2em;
 }
 
 .katex .eqn-num:before {
-  content: ' ';
+    content: " ";
 }
 
 /* Table Styles */
 .blog-content table {
-  border-collapse: collapse;
-  max-width: 100%;
-  margin: 20px auto;
+    border-collapse: collapse;
+    max-width: 100%;
+    margin: 20px auto;
 }
 
 .blog-content th,
 .blog-content td {
-  border: 1px solid #ddd;
-  text-align: left;
-  padding: 8px;
+    border: 1px solid #ddd;
+    text-align: left;
+    padding: 8px;
 }
 
 .blog-content th {
-  background-color: #f2f2f2;
+    background-color: #f2f2f2;
 }
 
 .blog-content.dark-mode th {
-  background-color: hsla(0, 0%, 93%, 0.2);
+    background-color: hsla(0, 0%, 93%, 0.2);
 }
 
 /* Image Styles */
 .blog-content img {
-  width: 100%;
-  max-width: 800px;
-  height: auto;
-  display: block;
-  margin: auto;
+    width: 100%;
+    max-width: 800px;
+    height: auto;
+    display: block;
+    margin: auto;
 }
 
 .blog-content a {
-  color: #172b41;
-  text-decoration: underline;
+    color: #172b41;
+    text-decoration: underline;
 }
 
 .blog-content a[data-footnote-ref] {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .blog-content a[data-footnote-backref] {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .blog-content a:hover,
 .blog-content a:focus {
-  color: #777777;
-  text-decoration: underline;
+    color: #777777;
+    text-decoration: underline;
 }
 
 .blog-content .katex a,
 .blog-content .katex-display a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 /* Caption Styles */
 .caption {
-  display: block;
-  font-size: smaller;
-  text-align: center;
-  font-style: italic;
-  color: #555;
-  margin: 20px auto;
+    display: block;
+    font-size: smaller;
+    text-align: center;
+    font-style: italic;
+    color: #555;
+    margin: 20px auto;
 }
 
 .caption a {
-  color: #555;
+    color: #555;
 }
 
 .caption a:hover {
-  color: #8f8f8f;
+    color: #8f8f8f;
 }
 
 .subtitle {
-  display: block;
-  font-size: smaller;
-  text-align: left;
-  font-style: italic;
-  color: #555;
-  margin: 20px auto;
+    display: block;
+    font-size: smaller;
+    text-align: left;
+    font-style: italic;
+    color: #555;
+    margin: 20px auto;
 }
 
 .blog-content details {
-  background-color: #f0f0f0;
-  padding: 10px;
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.1);
-  margin: 20px auto;
+    background-color: #f0f0f0;
+    padding: 10px;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.1);
+    margin: 20px auto;
 }
 
 .blog-content summary {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .blog-content details[open] summary {
-  margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .blog-content blockquote {
-  margin-block-start: 0;
-  margin-inline-start: 0;
-  display: block;
-  border-radius: 5px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0, 0.08);
-  padding-left: 0.8rem;
-  padding-right: 0.8rem;
-  padding-bottom: 0.9em;
-  margin: 20px auto;
+    margin-block-start: 0;
+    margin-inline-start: 0;
+    display: block;
+    border-radius: 5px;
+    box-shadow:
+        0 1px 2px rgba(0, 0, 0, 0.12),
+        0 3px 10px rgba(0, 0, 0, 0.08);
+    padding-left: 0.8rem;
+    padding-right: 0.8rem;
+    padding-bottom: 0.9em;
+    margin: 20px auto;
 }
 
 .blog-content blockquote p:first-child {
-  margin-top: 0.5em;
+    margin-top: 0.5em;
 }
 
 .blog-content blockquote p:last-child {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 .blog-content blockquote::before {
-  display: block;
-  font-weight: bold;
-  text-transform: uppercase;
-  font-size: 0.85em;
-  padding-top: 0.9rem;
+    display: block;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 0.85em;
+    padding-top: 0.9rem;
 }
 
 /* Definition */
 .blog-content blockquote.definition::before {
-  color: #31dd2e;
-  content: 'Definition';
+    color: #31dd2e;
+    content: "Definition";
 }
 
 .blog-content blockquote.definition {
-  background: rgba(174, 247, 126, 0.2);
-  border-left: 5px solid #31dd2e;
+    background: rgba(174, 247, 126, 0.2);
+    border-left: 5px solid #31dd2e;
 }
 
 /* Proof */
 .blog-content blockquote.proof::before {
-  color: #31dd2e;
-  content: 'Proof';
+    color: #31dd2e;
+    content: "Proof";
 }
 
 .blog-content blockquote.proof {
-  background: rgba(174, 247, 126, 0.2);
-  border-left: 5px solid #31dd2e;
+    background: rgba(174, 247, 126, 0.2);
+    border-left: 5px solid #31dd2e;
 }
 
 /* Equation */
 .blog-content blockquote.equation::before {
-  color: #486bd5;
-  content: 'Equation';
+    color: #486bd5;
+    content: "Equation";
 }
 
 .blog-content blockquote.equation {
-  background: rgba(126, 174, 247, 0.2);
-  border-left: 5px solid #486bd5;
-  padding-bottom: 0.1em;
+    background: rgba(126, 174, 247, 0.2);
+    border-left: 5px solid #486bd5;
+    padding-bottom: 0.1em;
 }
 
 /* Theorem */
 .blog-content blockquote.theorem::before {
-  color: #486bd5;
-  content: 'Theorem';
-  font-style: normal;
+    color: #486bd5;
+    content: "Theorem";
+    font-style: normal;
 }
 
 .blog-content blockquote.theorem {
-  background: rgba(126, 174, 247, 0.2);
-  border-left: 5px solid #486bd5;
-  font-style: italic;
+    background: rgba(126, 174, 247, 0.2);
+    border-left: 5px solid #486bd5;
+    font-style: italic;
 }
 
 /* Important */
 .blog-content blockquote.important::before {
-  color: #dd2e2e;
-  content: 'Important';
+    color: #dd2e2e;
+    content: "Important";
 }
 
 .blog-content blockquote.important {
-  background: rgba(247, 126, 126, 0.2);
-  border-left: 5px solid #dd2e2e;
+    background: rgba(247, 126, 126, 0.2);
+    border-left: 5px solid #dd2e2e;
 }
 
 /* Example */
 .blog-content blockquote.example::before {
-  color: #555555;
-  content: 'Example';
+    color: #555555;
+    content: "Example";
 }
 
 .blog-content blockquote.example {
-  background: #f0f0f0;
-  border-left: 5px solid #555555;
+    background: #f0f0f0;
+    border-left: 5px solid #555555;
 }
 
 .blog-content.dark-mode blockquote.example::before {
-  color: #cfcdcd;
-  content: 'Example';
+    color: #cfcdcd;
+    content: "Example";
 }
 
 .blog-content.dark-mode blockquote.example {
-  background: #444;
-  border-left: 5px solid #cfcdcd;
+    background: #444;
+    border-left: 5px solid #cfcdcd;
 }
 
 .blog-content.dark-mode {
-  color: #fff;
+    color: #fff;
 }
 
 .blog-content.dark-mode a {
-  color: #fff;
+    color: #fff;
 }
 
 .blog-content.dark-mode a:hover,
 .blog-content.dark-mode a:focus {
-  color: #bbb;
+    color: #bbb;
 }
 
 .blog-content.dark-mode details {
-  background-color: #444;
-  color: #fff;
+    background-color: #444;
+    color: #fff;
 }
 
 .blog-content.dark-mode .subtitle {
-  color: #fff;
+    color: #fff;
 }
 
 .blog-content.dark-mode .caption {
-  color: #fff;
+    color: #fff;
 }
 
 .blog-content code:not([class]):not(.code-blocks code) {
-  padding: 0.2em 0.4em;
-  margin: 0;
-  font-size: 85%;
-  white-space: break-spaces;
-  background-color: #afb8c133;
-  border-radius: 6px;
-  color: black;
+    padding: 0.2em 0.4em;
+    margin: 0;
+    font-size: 85%;
+    white-space: break-spaces;
+    background-color: #afb8c133;
+    border-radius: 6px;
+    color: black;
 }
 
 .blog-content.dark-mode code:not([class]):not(.code-blocks code) {
-  padding: 0.2em 0.4em;
-  margin: 0;
-  font-size: 85%;
-  white-space: break-spaces;
-  background-color: #6e768166;
-  border-radius: 6px;
-  color: white;
+    padding: 0.2em 0.4em;
+    margin: 0;
+    font-size: 85%;
+    white-space: break-spaces;
+    background-color: #6e768166;
+    border-radius: 6px;
+    color: white;
 }
 
 .blog-content.dark-mode .tikz-drawing svg {
-  -webkit-filter: invert(100%);
-  filter: invert(100%);
+    -webkit-filter: invert(100%);
+    filter: invert(100%);
 }
 
 .blog-content .tikz-drawing svg {
-  max-width: 100%;
-  width: 500px;
-  margin: 20px auto;
+    max-width: 100%;
+    width: 500px;
+    margin: 20px auto;
 }
