add tocFontFamily and tocCustomFontUrl to config

--- a/src/styles/NotieToc.module.css
+++ b/src/styles/NotieToc.module.css
@@ -1,6 +1,6 @@
 /* Get colors from Config */
 .note-toc {
-    font-family: var(--blog-font-family);
+    font-family: var(--note-toc-font-family);
     color: var(--blog-text-color);
 }
 
