fix: add custom font-size for code blocks.

--- a/src/styles/Notie.module.css
+++ b/src/styles/Notie.module.css
@@ -130,6 +130,10 @@
     filter: var(--blog-tikz-style);
 }
 
+.code-blocks {
+    font-size: var(--blog-code-font-size);
+}
+
 /* //////////////////////// */
 
 /* Heading styles */
