--- a/src/styles/notie-global.css
+++ b/src/styles/notie-global.css
@@ -227,6 +227,7 @@ blockquote.example {
     font-style: italic;
     content: "Proof. ";
     color: inherit;
+    margin-right: 0.3em;
 }
 
 [style*="--blog-blockquote-style: latex"] blockquote.proof::after {
@@ -244,8 +245,7 @@ blockquote.example {
     color: inherit;
     font-size: 2.2em;
     position: absolute;
-    right: 0.8rem;
+    right: 0rem;
     bottom: 0;
-    line-height: 1em;
-    font-weight: 0;
+    line-height: 0.65em;
 }
