remove tag for mobile devices.

--- a/src/styles/notie-global.css
+++ b/src/styles/notie-global.css
@@ -3,6 +3,12 @@
     content: " ";
 }
 
+@media (max-width: 430px) {
+    .katex .tag {
+        display: none;
+    }
+}
+
 .katex-display {
     overflow: auto hidden;
 }
