fixed scroll bar bug according to https://github.com/KaTeX/KaTeX/issues/3254#issuecomment-980396153

--- a/src/styles/notie-global.css
+++ b/src/styles/notie-global.css
@@ -13,6 +13,10 @@
     overflow: auto hidden;
 }
 
+.katex .vlist-t2 {
+    margin-right: 0px;
+}
+
 .katex {
     font-size: var(--blog-katex-size);
 }
